@@ -3,7 +3,6 @@
 export(annotateTargets)
 export(bootstrapResults)
 export(calculateBamCoverageByInterval)
-export(calculateGCContentByInterval)
 export(calculateIntervalWeights)
 export(calculateLogRatio)
 export(calculateMappingBiasGatk4)
@@ -19,9 +18,7 @@ export(callMutationBurden)
 export(correctCoverageBias)
 export(createCurationFile)
 export(createNormalDatabase)
-export(createTargetWeights)
 export(filterIntervals)
-export(filterTargets)
 export(filterVcfBasic)
 export(filterVcfMuTect)
 export(filterVcfMuTect2)
