@@ -15,8 +15,6 @@
 #' ignores this user provided segmentation.
 #' @param plot.cnv Segmentation plots.
 #' @param sampleid Sample id, used in output files.
-#' @param interval.weight.file Can be used to assign weights to intervals. 
-#' Currently requires patched version of PSCBS. Deprecated.
 #' @param weight.flag.pvalue Flag values with one-sided p-value smaller than
 #' this cutoff.
 #' @param alpha Alpha value for CBS, see documentation for the \code{segment}
@@ -77,7 +75,7 @@
 #' 
 #' @export segmentationPSCBS
 segmentationPSCBS <- function(normal, tumor, log.ratio, seg, plot.cnv, 
-    sampleid, interval.weight.file = NULL, weight.flag.pvalue = 0.01, alpha = 0.005, 
+    sampleid, weight.flag.pvalue = 0.01, alpha = 0.005, 
     undo.SD = NULL, flavor = "tcn&dh", tauA = 0.03, vcf = NULL,
     tumor.id.in.vcf = 1, normal.id.in.vcf = NULL, max.segments = NULL,
     prune.hclust.h = NULL, prune.hclust.method = "ward.D", chr.hash = NULL,
@@ -89,11 +87,6 @@ segmentationPSCBS <- function(normal, tumor, log.ratio, seg, plot.cnv,
 
     if (is.null(chr.hash)) chr.hash <- .getChrHash(seqlevels(tumor))
 
-    # TODO defunct in 1.18
-    if (!is.null(interval.weight.file)) {
-        normalDB <- .add_weights_to_normaldb(interval.weight.file)
-        tumor$weights <- subsetByOverlaps(normalDB$sd$weights, tumor)$weights
-    }
     if (!is.null(tumor$weights) && length(unique(tumor$weights)) > 1 ) {
         flog.info("Interval weights found, will use weighted PSCBS.")
     }
