@@ -1,12 +1,0 @@
-% Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/filterIntervals.R
-\name{filterTargets}
-\alias{filterTargets}
-\title{Remove low quality targets}
-\usage{
-filterTargets()
-}
-\description{
-This function is defunct and was renamed to 
-\code{\link{filterIntervals}}.
-}
