@@ -11,7 +11,6 @@ segmentationPSCBS(
   seg,
   plot.cnv,
   sampleid,
-  interval.weight.file = NULL,
   weight.flag.pvalue = 0.01,
   alpha = 0.005,
   undo.SD = NULL,
@@ -43,9 +42,6 @@ ignores this user provided segmentation.}
 \item{plot.cnv}{Segmentation plots.}
 
 \item{sampleid}{Sample id, used in output files.}
-
-\item{interval.weight.file}{Can be used to assign weights to intervals. 
-Currently requires patched version of PSCBS. Deprecated.}
 
 \item{weight.flag.pvalue}{Flag values with one-sided p-value smaller than
 this cutoff.}
